@@ -1,56 +1,100 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <configuration>
   <source>
-    <entity id="e1" name="string" label="String field" type="string" readonly="true"/>
-    <entity id="e2" name="integer" label="Integer field" type="integer" required="true">
-      <rule expr="$integer ge 16" msg="Integer must be greater than 15" mode="post"/>
+    <entity id="e1" name="e1" label="Textfield"></entity>
+    <entity id="e2" name="e2" label="Integer" type="integer"></entity>
+    <entity id="e3" name="e3" label="Float" type="float"></entity>
+    <entity id="e4" name="e4" label="Textarea">
+      <renderer type="textarea"/>
     </entity>
-    <entity id="e3" name="float" label="Float field" type="float">
-      <rule expr="$float lt 100" msg="Float must be lower than 100" mode="post"/>
-      <help>This is is a very long helptext which should span over
-      multiple rows. Further the will check if there are further html
-      tags allowed.</help>
-    </entity>
-    <entity id="e4" name="date" label="Date field" type="date" autocomplete="off" number="1">
+    <entity id="e5" name="e5" label="Datefield" type="date">
       <renderer type="datepicker"/>
-      <help>This is my helptext</help>
     </entity>
-    <entity id="e5" name="select" label="Select field" type="string">
-      <help>This is my helptext</help>
+    <entity id="e6" name="e6" label="Password">
+      <renderer type="password"/>
+    </entity>
+    <entity id="e7" name="e7" label="Dropdown">
       <renderer type="dropdown"/>
       <options>
         <option value="1">Option 1</option>
         <option value="2">Option 2</option>
         <option value="3">Option 3</option>
-        <option value="4">Option 4</option>
       </options>
     </entity>
-    <entity id="e6" name="optional" label="Optional field">
-      <help>This field is only shown if the Dropdown has selected option 4</help>
+    <entity id="e8" name="e8" label="Selection">
+      <renderer type="selection"/>
+      <options>
+        <option value="1">Option 1</option>
+        <option value="2">Option 2</option>
+        <option value="3">Option 3</option>
+      </options>
+    </entity>
+    <entity id="e9" name="e9" label="Radio">
+      <renderer type="radio"/>
+      <options>
+        <option value="1">Option 1</option>
+        <option value="2">Option 2</option>
+        <option value="3">Option 3</option>
+      </options>
+    </entity>
+    <entity id="e10" name="e10" label="Checkboxes">
+      <renderer type="checkbox"/>
+      <options>
+        <option value="1">Option 1</option>
+        <option value="2">Option 2</option>
+        <option value="3">Option 3</option>
+      </options>
+    </entity>
+    <entity id="e11" name="e11" label="Infofield" value="Calculated value">
+      <renderer type="info"/>
+    </entity>
+    <entity id="e12" name="e12" label="Hiddenfield">
+      <renderer type="hidden"/>
     </entity>
   </source>
   <form id="example1" css="testcss" autocomplete="off" method="POST" action="" enctype="multipart/form-data">
     <snippet ref="s1"/>
   </form>
   <snippet id="s1">
-    <row>
-      <col><field ref="e3"/></col>
-      <col><field ref="e4"/></col>
-    </row>
-    <row>
-      <col><field ref="e5"/></col>
-    </row>
-    <snippet ref="s2"/>
-  </snippet>
-  <snippet id="s2">
-    <row>
-      <col><field ref="e1"/></col>
-      <col><field ref="e2"/></col>
-    </row>
-    <row>
-      <if type="readonly" expr="$select == 4">
+    <page id="p1" label="Fields">
+      <fieldset label="Textfields">
+      <row>
+        <col><field ref="e1"/></col>
+      </row>
+      <row>
+        <col><field ref="e4"/></col>
+      </row>
+      <row>
         <col><field ref="e6"/></col>
-      </if>
-    </row>
+      </row>
+      </fieldset>
+      <fieldset label="Supported formats in textfields">
+      <row>
+        <col><field ref="e2"/></col>
+      </row>
+      <row>
+        <col><field ref="e3"/></col>
+      </row>
+      <row>
+        <col><field ref="e5"/></col>
+      </row>
+      </fieldset>
+      <fieldset label="Selections">
+      <row>
+        <col><field ref="e7"/></col>
+      </row>
+      <row>
+        <col><field ref="e8"/></col>
+      </row>
+      </fieldset>
+      <fieldset label="Other">
+      <row>
+        <col><field ref="e11"/></col>
+      </row>
+      <row>
+        <col><field ref="e12"/></col>
+      </row>
+      </fieldset>
+    </page>
   </snippet>
 </configuration>
